BARC UAT/src/objects/Return_Receipt_Details__c.object
<CustomObject>
    <fields>
        <fullName>GRN_No__c</fullName>
        <label>GRN No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_UOM__c</fullName>
        <label>Item UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Return_No__c</fullName>
        <label>Purchase Return No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Receipt__c</fullName>
        <label>Return Receipt</label>
        <referenceTo>Return_Receipt__c</referenceTo>
        <relationshipLabel>Return Receipt Details</relationshipLabel>
        <relationshipName>Return_Receipt_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sr_No__c</fullName>
        <label>Sr No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Return Receipt Details</label>
    <nameField>
        <displayFormat>RRD-{0}</displayFormat>
        <label>Return Receipt Details No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Receipt Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>